--- a/ubuntu-base-config.json
+++ b/ubuntu-base-config.json
@@ -1,7 +1,7 @@
 {
     "platform": {
         "name": "ubuntu2004",
-        "fullName": "ubuntu20.04",
+        "nameFull": "ubuntu20.04",
         "namePretty": "Ubuntu 20.04"
     },
     "installedToolchains": []
