Ubuntu 22.04 test configuration

--- a/docker/docker-compose.2204.58.yaml
+++ b/docker/docker-compose.2204.58.yaml
@@ -13,7 +13,7 @@ services:
     environment:
       - SWIFTLY_PLATFORM_NAME=ubuntu2204
       - SWIFTLY_PLATFORM_NAME_FULL=ubuntu22.04
-      - SWIFTLY_PLATFORM_NAME_PRETTY=Ubuntu 22.04
+      - SWIFTLY_PLATFORM_NAME_PRETTY"Ubuntu 22.04"
 
   shell:
     image: swiftly:22.04-5.7
