properly set CPU architecture when running tests

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
 
   test:
     <<: *common
-    command: /usr/bin/env bash -xcl "swift test -Xswiftc -warnings-as-errors"
+    command: /usr/bin/env bash -xcl "./scripts/run-tests.sh"
 
   # util
 
