--- a/docker/docker-compose.2204.57.yaml
+++ b/docker/docker-compose.2204.57.yaml
@@ -2,12 +2,11 @@ version: "3"
 
 services:
 
-  runtime-setup:
+  test-setup:
     image: swiftly:22.04-5.7
     build:
       args:
         base_image: "swift:5.7-jammy"
-
 
   lint:
     image: swiftly:22.04-5.7
@@ -18,6 +17,15 @@ services:
       - SWIFTLY_PLATFORM_NAME=ubuntu2204
       - SWIFTLY_PLATFORM_NAME_FULL=ubuntu22.04
       - SWIFTLY_PLATFORM_NAME_PRETTY="Ubuntu 22.04"
+
+  install-test-setup:
+    image: swiftly:22.04
+    build:
+      args:
+        base_image: "ubuntu:jammy"
+
+  install-test:
+    image: swiftly:22.04
 
   shell:
     image: swiftly:22.04-5.7
