--- a/docker/docker-compose.2004.57.yaml
+++ b/docker/docker-compose.2004.57.yaml
@@ -2,12 +2,11 @@ version: "3"
 
 services:
 
-  runtime-setup:
+  test-setup:
     image: swiftly:20.04-5.7
     build:
       args:
         base_image: "swift:5.7-focal"
-
 
   lint:
     image: swiftly:20.04-5.7
@@ -18,6 +17,15 @@ services:
       - SWIFTLY_PLATFORM_NAME=ubuntu2004
       - SWIFTLY_PLATFORM_NAME_FULL=ubuntu20.04
       - SWIFTLY_PLATFORM_NAME_PRETTY="Ubuntu 20.04"
+
+  install-test-setup:
+    image: swiftly:20.04
+    build:
+      args:
+        base_image: "ubuntu:focal"
+
+  install-test:
+    image: swiftly:20.04
 
   shell:
     image: swiftly:20.04-5.7
