add dockerfiles for amazonlinux2

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -24,7 +24,7 @@ services:
 
   lint:
     <<: *common
-    command: /usr/bin/env bash -xcl "swiftformat --lint ."
+    command: /usr/bin/env bash -xcl "./scripts/check-lint.sh"
 
   test:
     <<: *common
