--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -21,6 +21,8 @@ services:
     cap_drop:
       - CAP_NET_RAW
       - CAP_NET_BIND_SERVICE
+    environment:
+      - SWIFTLY_GITHUB_TOKEN="$GITHUB_ACCESS_TOKEN"
 
   lint:
     <<: *common
