--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -13,7 +13,6 @@ services:
 
   common: &common
     image: swiftly:default
-    depends_on: [test-setup]
     volumes:
       - ~/.ssh:/root/.ssh
       - ..:/code:z
@@ -24,10 +23,15 @@ services:
 
   lint:
     <<: *common
+    image: swiftly:lint
+    build:
+      context: ..
+      dockerfile: docker/lint.dockerfile
     command: /usr/bin/env bash -xcl "./scripts/check-lint.sh"
 
   test:
     <<: *common
+    depends_on: [test-setup]
     command: /usr/bin/env bash -xcl "./scripts/run-tests.sh"
 
   install-test-setup:
@@ -55,4 +59,5 @@ services:
 
   shell:
     <<: *common
+    depends_on: [test-setup]
     entrypoint: /usr/bin/env bash
