--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@
 /*.xcodeproj
 xcuserdata/
 DerivedData/
-.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+.swiftpm/
+.vscode/
+Package.resolved
