--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,6 +1,6 @@
 # this file is not designed to be run directly
-# instead, use the docker-compose.<os>.<swift> files
-# eg docker-compose -f docker/docker-compose.yaml -f docker/docker-compose.1804.50.yaml run test
+# instead, use the docker-compose.<os>.yaml files
+# eg docker-compose -f docker/docker-compose.yaml -f docker/docker-compose.1804.yaml run test
 version: "3"
 
 services:
