Update release packages for Linux/macOS to align with swift.org
The release packages are currently designed for making binaries that
are published to GitHub. Refactor those scripts to make offerings
for swift.org. Update the RELEASING.md with the changes.

Fix the platform pretty names to remove extra double quotes from
the docker compose yaml files.

Correct the package list and the package manager for Amazon Linux
2, from apt to yum. There are extra packages in the list that do
not exist there.

Fix the /etc/os-release parsing so that ID_LIKE is correctly read
from the input.

Work around decompression limit errors from the GitHub API requests
by using our own inner HTTPClient for requests.

--- a/docker/docker-compose.2004.yaml
+++ b/docker/docker-compose.2004.yaml
@@ -13,7 +13,7 @@ services:
     environment:
       - SWIFTLY_PLATFORM_NAME=ubuntu2004
       - SWIFTLY_PLATFORM_NAME_FULL=ubuntu20.04
-      - SWIFTLY_PLATFORM_NAME_PRETTY="Ubuntu 20.04"
+      - SWIFTLY_PLATFORM_NAME_PRETTY=Ubuntu 20.04
 
   install-test-setup:
     image: swiftly:20.04-install-test
