--- a/docker/docker-compose.amazonlinux2.yaml
+++ b/docker/docker-compose.amazonlinux2.yaml
@@ -15,7 +15,7 @@ services:
     environment:
       - SWIFTLY_PLATFORM_NAME=amazonlinux2
       - SWIFTLY_PLATFORM_NAME_FULL=amazonlinux2
-      - SWIFTLY_PLATFORM_NAME_PRETTY="Amazon Linux 2"
+      - SWIFTLY_PLATFORM_NAME_PRETTY=Amazon Linux 2
 
   install-test-setup:
     image: swiftly:amazonlinux2-install-test
