Add new Linux platforms: Ubuntu 2404,2310, Debian 12, Fedora 39
Add support for these new platforms to swiftly, the autodetection,
the tests, and docker support.

Remove the swiftly installer portion of the code.

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -53,7 +53,7 @@ services:
 
   install-test:
     <<: *install-test-common
-    command: /usr/bin/env bash -xcl "./run-tests.sh"
+    command: /usr/bin/env bash -xcl "echo ./run-tests.sh" # TODO remove the install tests
 
   # util
 
