--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -21,6 +21,7 @@ jobs:
     name: Test
     uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
     with:
+      node-version: 18.x
       # linux_os_versions: "[\"jammy\", \"noble\", \"focal\", \"amazonlinux2\", \"rhel-ubi9\", \"bookworm\", \"fedora39\"]"
       # Not working: noble (compile error in TSC Filesystem), bookworm (missing memory.h), fedora39 (missing memory.h)
       linux_os_versions: "[\"jammy\", \"focal\", \"amazonlinux2\", \"rhel-ubi9\"]"
