--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -62,6 +62,8 @@ jobs:
     container:
       image: "ubuntu:22.04"
     steps:
+      - name: Prepare System
+        run: apt update && apt -y install ca-certificates gpg
       - name: Download Release
         uses: actions/download-artifact@v4
         with:
