Add documentation related build and checks to GitHub workflows (#186)
There's nothing in the pull request verification that checks if
the command-line references are up-to-date. Add a job to the pull
request update workflow that verifies this.

There's nothing in the release build workflow that generates the
documentation and uploads the documentation artifacts so that they
can be published. Add a step to the build release job that generates
the documentation so that it can be published to swift.org.

Overcome git dubious repo error.

Give the uploaded artifacts unique names to avoid collisions.

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -23,10 +23,19 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Build Artifact
+      - name: Build Release Artifact
         run: swift run build-swiftly-release ${{ inputs.skip }} ${{ inputs.version }}
-      - name: Upload Artifact
+      - name: Upload Release Artifact
         uses: actions/upload-artifact@v4
         with:
+          name: swiftly-release-x86_64
           path: .build/release/swiftly-*.tar.gz
+          if-no-files-found: error
+      - name: Build Documentation Artifacts
+        run: swift package --allow-writing-to-directory .build/docs generate-documentation --target SwiftlyDocs --output-path .build/docs
+      - name: Upload Documentation Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: swiftly-docs
+          path: .build/docs/**
           if-no-files-found: error
