--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -23,8 +23,7 @@ jobs:
     name: Test
     uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
     with:
-      # Amazon Linux 2 won't work with GH infrastructure
-      linux_os_versions: "[\"jammy\", \"focal\", \"rhel-ubi9\", \"noble\", \"bookworm\", \"fedora39\"]"
+      linux_os_versions: "[\"jammy\", \"focal\", \"rhel-ubi9\", \"noble\", \"bookworm\", \"fedora39\", \"amazonlinux2\"]"
       # We only care about the current stable release, because that's where we make our swiftly releases
       linux_exclude_swift_versions: "[{\"swift_version\": \"nightly-main\"},{\"swift_version\": \"nightly-6.0\"},{\"swift_version\": \"5.8\"},{\"swift_version\": \"5.9\"},{\"swift_version\": \"5.10\"}]"
       linux_pre_build_command: ./scripts/prep-gh-action.sh && ./scripts/install-libarchive.sh
@@ -34,7 +33,7 @@ jobs:
     name: Release Build Check
     runs-on: ubuntu-latest
     container:
-      image: "swift:6.0-rhel-ubi9"
+      image: "swift:6.0-amazonlinux2"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
