--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -19,7 +19,7 @@ jobs:
     name: Build Release
     runs-on: ubuntu-latest
     container:
-      image: "swift:6.0-rhel-ubi9"
+      image: "swift:6.0-amazonlinux2"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
