--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -23,7 +23,6 @@ jobs:
     name: Test
     uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
     with:
-      # Amazon Linux 2 won't work with GH infrastructure
       linux_os_versions: "[\"jammy\", \"focal\", \"rhel-ubi9\", \"noble\", \"bookworm\", \"fedora39\"]"
       # We only care about the current stable release, because that's where we make our swiftly releases
       linux_exclude_swift_versions: "[{\"swift_version\": \"nightly-main\"},{\"swift_version\": \"nightly-6.0\"},{\"swift_version\": \"5.8\"},{\"swift_version\": \"5.9\"},{\"swift_version\": \"5.10\"}]"
@@ -39,7 +38,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Build Artifact
-        run: swift run build-swiftly-release --skip "999.0.0"
+        run: swift run build-swiftly-release --use-rhel-ubi9 --skip "999.0.0"
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
