--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -19,6 +19,26 @@ jobs:
       shell_check_enabled: false
       unacceptable_language_check_enabled: true
 
+  tests-selfhosted:
+    name: Test Self Hosted
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        container: ["ubuntu:20.04", "ubuntu:22.04", "ubuntu:24.04", "redhat/ubi9", "debian:12", "fedora:39"]
+    container:
+      image: ${{ matrix.container }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Install swiftly
+        run: curl -O https://download.swift.org/swiftly/linux/swiftly-0.4.0-dev-$(uname -m).tar.gz && tar zxf swiftly-*.tar.gz && ./swiftly init --skip-install
+      - name: Install selected swift toolchain
+        run: /root/.local/share/swiftly/bin/swiftly install --post-install=post-install.sh
+      - name: Perform swift toolchain post-installation
+        run: ./post-install.sh
+      - name: Build and Test
+        run: ./scripts/prep-gh-action.sh && ./scripts/install-libarchive.sh && /root/local/.share/swiftly/bin/swift test
+
   tests:
     name: Test
     uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
