--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -36,17 +36,17 @@ jobs:
       - name: Install swiftly
         run: cd /root && curl -O https://download.swift.org/swiftly/linux/swiftly-0.4.0-dev-x86_64.tar.gz && tar zxf swiftly-*.tar.gz && ./swiftly init --skip-install
       - name: Install selected swift toolchain
-        run: /root/.local/share/swiftly/bin/swiftly install --post-install-file=post-install.sh
+        run: swiftly install --post-install-file=post-install.sh
       - name: Perform swift toolchain post-installation
         run: chmod u+x post-install.sh && ./post-install.sh
       - name: Build and Test
-        run: CC=clang /root/.local/share/swiftly/bin/swiftly run ./scripts/install-libarchive.sh && /root/.local/share/swiftly/bin/swiftly run swift test
+        run: CC=clang swiftly run ./scripts/install-libarchive.sh && swift test
 
   tests:
     name: Test
     uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
     with:
-      linux_os_versions: "[\"jammy\", \"focal\", \"rhel-ubi9\", \"noble\", \"bookworm\", \"fedora39\"]"
+      linux_os_versions: "[\"jammy\"]"
       # We only care about the current stable release, because that's where we make our swiftly releases
       linux_exclude_swift_versions: "[{\"swift_version\": \"nightly-main\"},{\"swift_version\": \"nightly-6.0\"},{\"swift_version\": \"5.8\"},{\"swift_version\": \"5.9\"},{\"swift_version\": \"5.10\"}]"
       linux_pre_build_command: ./scripts/prep-gh-action.sh && ./scripts/install-libarchive.sh
