--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -34,13 +34,13 @@ jobs:
       - name: Prepare image
         run: ./scripts/prep-gh-action.sh
       - name: Install swiftly
-        run: curl -O https://download.swift.org/swiftly/linux/swiftly-0.4.0-dev-x86_64.tar.gz && tar zxf swiftly-*.tar.gz && mv swiftly /usr/bin && swiftly init -y --skip-install
+        run: curl -O https://download.swift.org/swiftly/linux/swiftly-0.4.0-dev-x86_64.tar.gz && tar zxf swiftly-*.tar.gz && mv swiftly /usr/bin && swiftly init -y --skip-install && . /root/.local/share/swiftly/env.sh && echo "PATH=$PATH" >> "$GITHUB_ENV"
       - name: Install selected swift toolchain
-        run: swiftly install --post-install-file=post-install.sh
+        run: swiftly install --post-install-file=post-install.sh && swift --version
       - name: Perform swift toolchain post-installation
         run: chmod u+x post-install.sh && ./post-install.sh
       - name: Build and Test
-        run: CC=clang swiftly run ./scripts/install-libarchive.sh && swiftly run swift test
+        run: CC=clang swiftly run ./scripts/install-libarchive.sh && swift test
 
   tests:
     name: Test
