Force bash shell when updating the environment

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -35,10 +35,8 @@ jobs:
         run: ./scripts/prep-gh-action.sh
       - name: Install swiftly
         run: curl -O https://download.swift.org/swiftly/linux/swiftly-0.4.0-dev-x86_64.tar.gz && tar zxf swiftly-*.tar.gz && mv swiftly /usr/bin && swiftly init -y --skip-install
-      - name: Show environment
-        run: cat "/root/.local/share/swiftly/env.sh" && echo "SHELL is $SHELL"
       - name: Update environment
-        run: . "/root/.local/share/swiftly/env.sh" && echo "GITHUB_ENV=$GITHUB_ENV" && echo "PATH=$PATH" >> "$GITHUB_ENV" && echo "PATH=$PATH" "$GITHUB_ENV"
+        run: bash -c '. "/root/.local/share/swiftly/env.sh" && echo "GITHUB_ENV=$GITHUB_ENV" && echo "PATH=$PATH" >> "$GITHUB_ENV" && echo "PATH=$PATH" "$GITHUB_ENV"'
       - name: Install selected swift toolchain
         run: swiftly install --post-install-file=post-install.sh
       - name: Perform swift toolchain post-installation
