--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -34,9 +34,9 @@ jobs:
       - name: Prepare image
         run: ./scripts/prep-gh-action.sh
       - name: Install swiftly
-        run: curl -O https://download.swift.org/swiftly/linux/swiftly-0.4.0-dev-x86_64.tar.gz && tar zxf swiftly-*.tar.gz && mv swiftly /usr/bin && swiftly init -y --skip-install
+        run: curl -O https://download.swift.org/swiftly/linux/swiftly-0.4.0-dev-x86_64.tar.gz && tar zxf swiftly-*.tar.gz && ./swiftly init -y --skip-install
       - name: Update environment
-        run: bash -c '. "/root/.local/share/swiftly/env.sh" && echo "GITHUB_ENV=$GITHUB_ENV" && echo "PATH=$PATH" >> "$GITHUB_ENV" && echo "PATH=$PATH" "$GITHUB_ENV"'
+        run: bash -c '. "/root/.local/share/swiftly/env.sh" && echo "PATH=$PATH" >> "$GITHUB_ENV" && echo "SWIFTLY_HOME_DIR=$SWIFTLY_HOME_DIR" >> "$GITHUB_ENV" && echo "SWIFTLY_BIN_DIR=$SWIFTLY_BIN_DIR" >> "$GITHUB_ENV"'
       - name: Install selected swift toolchain
         run: swiftly install --post-install-file=post-install.sh
       - name: Perform swift toolchain post-installation
