--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -23,7 +23,7 @@ jobs:
       unacceptable_language_check_enabled: true
 
   tests-selfhosted:
-    name: Test Self Hosted
+    name: Test (Self Hosted) - ${{ matrix.container }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -34,7 +34,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Prepare image
+      - name: Prepare the action
         run: ./scripts/prep-gh-action.sh
       - name: Install swiftly
         run: bash -c 'curl -O https://download.swift.org/swiftly/linux/swiftly-${SWIFTLY_BOOTSTRAP_VERSION}-$(uname -m).tar.gz && tar zxf swiftly-*.tar.gz && ./swiftly init -y --skip-install'
@@ -63,10 +63,22 @@ jobs:
     name: Release Build Check
     runs-on: ubuntu-latest
     container:
-      image: "swift:6.0-rhel-ubi9"
+      image: "redhat/ubi9"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Prepare the action
+        run: ./scripts/prep-gh-action.sh
+      - name: Install swiftly
+        run: bash -c 'curl -O https://download.swift.org/swiftly/linux/swiftly-${SWIFTLY_BOOTSTRAP_VERSION}-$(uname -m).tar.gz && tar zxf swiftly-*.tar.gz && ./swiftly init -y --skip-install'
+      - name: Update environment
+        run: bash -c '. "/root/.local/share/swiftly/env.sh" && echo "PATH=$PATH" >> "$GITHUB_ENV" && echo "SWIFTLY_HOME_DIR=$SWIFTLY_HOME_DIR" >> "$GITHUB_ENV" && echo "SWIFTLY_BIN_DIR=$SWIFTLY_BIN_DIR" >> "$GITHUB_ENV"'
+      - name: Install selected swift toolchain
+        run: swiftly install --post-install-file=post-install.sh
+      - name: Perform swift toolchain post-installation
+        run: chmod u+x post-install.sh && ./post-install.sh
+      - name: Display swift version
+        run: swift --version
       - name: Build Artifact
         run: swift run build-swiftly-release --use-rhel-ubi9 --skip "999.0.0"
       - name: Upload Artifact
@@ -79,25 +91,47 @@ jobs:
 
   formatcheck:
     name: Format Check
-    uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
-    with:
-      # We only need to run this with one swift release and on one of the linux distributions
-      linux_os_versions: "[\"jammy\"]"
-      linux_exclude_swift_versions: "[{\"swift_version\": \"nightly-main\"},{\"swift_version\": \"nightly-6.0\"},{\"swift_version\": \"5.8\"},{\"swift_version\": \"5.9\"},{\"swift_version\": \"5.10\"}]"
-      linux_pre_build_command: ./scripts/prep-gh-action.sh
-      linux_build_command: swift run swiftformat --lint --dryrun . || (echo "Please run 'swift run swiftformat .' to format the source code."; exit 1)
-      enable_windows_checks: false
+    runs-on: ubuntu-latest
+    container:
+      image: ubuntu:22.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Prepare the action
+        run: ./scripts/prep-gh-action.sh
+      - name: Install swiftly
+        run: bash -c 'curl -O https://download.swift.org/swiftly/linux/swiftly-${SWIFTLY_BOOTSTRAP_VERSION}-$(uname -m).tar.gz && tar zxf swiftly-*.tar.gz && ./swiftly init -y --skip-install'
+      - name: Update environment
+        run: bash -c '. "/root/.local/share/swiftly/env.sh" && echo "PATH=$PATH" >> "$GITHUB_ENV" && echo "SWIFTLY_HOME_DIR=$SWIFTLY_HOME_DIR" >> "$GITHUB_ENV" && echo "SWIFTLY_BIN_DIR=$SWIFTLY_BIN_DIR" >> "$GITHUB_ENV"'
+      - name: Install selected swift toolchain
+        run: swiftly install --post-install-file=post-install.sh
+      - name: Perform swift toolchain post-installation
+        run: chmod u+x post-install.sh && ./post-install.sh
+      - name: Display swift version
+        run: swift --version
+      - name: Check format
+        run: swift run swiftformat --lint --dryrun . || (echo "Please run 'swift run swiftformat .' to format the source code."; exit 1)
 
   docscheck:
     name: Documentation Check
     runs-on: ubuntu-latest
     container:
-      image: "swift:6.0-noble"
+      image: ubuntu:22.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Prepare the action
-        run: ./scripts/prep-gh-action.sh && ./scripts/install-libarchive.sh
+        run: ./scripts/prep-gh-action.sh
+      - name: Install swiftly
+        run: bash -c 'curl -O https://download.swift.org/swiftly/linux/swiftly-${SWIFTLY_BOOTSTRAP_VERSION}-$(uname -m).tar.gz && tar zxf swiftly-*.tar.gz && ./swiftly init -y --skip-install'
+      - name: Update environment
+        run: bash -c '. "/root/.local/share/swiftly/env.sh" && echo "PATH=$PATH" >> "$GITHUB_ENV" && echo "SWIFTLY_HOME_DIR=$SWIFTLY_HOME_DIR" >> "$GITHUB_ENV" && echo "SWIFTLY_BIN_DIR=$SWIFTLY_BIN_DIR" >> "$GITHUB_ENV"'
+      - name: Install selected swift toolchain
+        run: swiftly install --post-install-file=post-install.sh
+      - name: Perform swift toolchain post-installation
+        run: chmod u+x post-install.sh && ./post-install.sh
+      - name: Display swift version
+        run: swift --version
       - name: Generate Swiftly CLI Reference and Check for Differences
         run: swift package plugin --allow-writing-to-package-directory generate-docs-reference && git config --global --add safe.directory $(pwd) && git diff --exit-code Documentation/SwiftlyDocs.docc/swiftly-cli-reference.md || (echo "The documentation hasn't been updated with the latest swiftly command-line reference. Please run 'swift package plugin generate-docs-reference' and commit/push the changes."; exit 1)
       - name: Generate Documentation Set
