--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -132,6 +132,8 @@ jobs:
         run: chmod u+x post-install.sh && ./post-install.sh
       - name: Display swift version
         run: swift --version
+      - name: Install libarchive
+        run: CC=clang swiftly run ./scripts/install-libarchive.sh
       - name: Generate Swiftly CLI Reference and Check for Differences
         run: swift package plugin --allow-writing-to-package-directory generate-docs-reference && git config --global --add safe.directory $(pwd) && git diff --exit-code Documentation/SwiftlyDocs.docc/swiftly-cli-reference.md || (echo "The documentation hasn't been updated with the latest swiftly command-line reference. Please run 'swift package plugin generate-docs-reference' and commit/push the changes."; exit 1)
       - name: Generate Documentation Set
