--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -27,17 +27,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Prepare the action
-        run: ./scripts/prep-gh-action.sh
-      - name: Install swiftly
-        run: bash -c 'curl -O https://download.swift.org/swiftly/linux/swiftly-${SWIFTLY_BOOTSTRAP_VERSION}-$(uname -m).tar.gz && tar zxf swiftly-*.tar.gz && ./swiftly init -y --skip-install'
-      - name: Update environment
-        run: bash -c '. "/root/.local/share/swiftly/env.sh" && echo "PATH=$PATH" >> "$GITHUB_ENV" && echo "SWIFTLY_HOME_DIR=$SWIFTLY_HOME_DIR" >> "$GITHUB_ENV" && echo "SWIFTLY_BIN_DIR=$SWIFTLY_BIN_DIR" >> "$GITHUB_ENV"'
-      - name: Install selected swift toolchain
-        run: swiftly install --post-install-file=post-install.sh
-      - name: Perform swift toolchain post-installation
-        run: chmod u+x post-install.sh && ./post-install.sh
-      - name: Display swift version
-        run: swift --version
+        run: ./scripts/prep-gh-action.sh --install-swiftly
       - name: Build Release Artifact
         run: swift run build-swiftly-release --use-rhel-ubi9 ${{ inputs.skip }} ${{ inputs.version }}
       - name: Upload Release Artifact
